--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,24 @@
+body{
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
 .background{
-    padding: 20px;
-    height: 500px;
+    height: 100vh;
     width: 100%;
     background:
     url('./images/top-left.png') no-repeat top left,
     url('./images/top-right.png') no-repeat top right,
     url('./images/bottom-right.png') no-repeat bottom right,
-    url('./images/bottom-left.png') no-repeat bottom left;
-    
+    url('./images/bottom-left.png') no-repeat bottom left,
+    url('./images/top-center.png') repeat-x top,                                                                                                                                                                                          
+    url('./images/left-side.png') repeat-y left,
+    url('./images/bottom-center.png') repeat-x bottom,
+    url('./images/right-side.png')repeat-y right;
+}
+.text {
+    padding: 130px;
+    font-size: 30px;
 }
 
   
